# mt5-quant

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  WINDSURF_SETUP.md  mt5-quant-onedir.spec  mt5-quant.spec  pyproject.toml  server.json  test_final_rust_mcp.sh  test_mcp.py  test_rust_mcp.sh  test_rust_mcp_continuous.sh
.claude/commands/: release.md
.github/: FUNDING.yml
.github/workflows/: release.yml
.windsurf/workflows/: create-mcp-tool.md  release.md
analytics/: analyze.py  extract.py  optimize_parser.py
config/: example.set
docs/: ANTIGRAVITY.md  ARCHITECTURE.md  CLAUDE.md  CONFIG.md  CURSOR.md  MCP_TOOLS.md  QUICKSTART.md  REMOTE_AGENTS.md  TROUBLESHOOTING.md  VSCODE.md  WINDSURF.md
hooks/: hook-mcp.py
mcp-package/: README.md  server.json
mcp-package/config/: mt5-quant.example.yaml  mt5-quant.yaml
mcp-package/docs/: MCP_TOOLS.md  QUICKSTART.md  REMOTE_AGENTS.md  TROUBLESHOOTING.md  VSCODE.md
scripts/: backtest_pipeline.sh  build-executable-onedir.sh  build-executable.sh  build-release.sh  build-rust.sh  mqlcompile.sh  optimize.sh  platform_detect.sh  release.sh  setup.sh
server/: main.py
src/: config.rs  main.rs  mcp_server.rs  mt5.rs
src/analytics/: analyze.rs  extract.rs  mod.rs
src/compile/: mod.rs  mql_compiler.rs
src/models/: config.rs  deals.rs  metrics.rs  mod.rs  report.rs
src/optimization/: mod.rs  optimizer.rs  parser.rs
src/pipeline/: backtest.rs  mod.rs  stages.rs
src/storage/: database.rs  mod.rs
src/tools/: definitions.rs  handlers.rs  mod.rs
src/tools/definitions/: analytics.rs  backtest.rs  baseline.rs  data.rs  experts.rs  mod.rs  optimization.rs  reports.rs  setfiles.rs  system.rs  update.rs  utility.rs
src/tools/handlers/: analysis.rs  backtest.rs  data.rs  experts.rs  mod.rs  optimization.rs  reports.rs  setfiles.rs  system.rs  utility.rs
src/utils/: mod.rs
tests/: e2e_all_tools.sh  integration_test.sh  integration_tests.rs  test_analyze.py  test_extract.py  test_mcp.py
tests/fixtures/: sample_deals.csv  sample_report.htm  sample_report.htm.xml
